--- a/config-local/order-server-local.yml
+++ b/config-local/order-server-local.yml
@@ -14,9 +14,9 @@ spring:
     sampler:
       percentage: 1.0
   datasource:
-      url: jdbc:mysql://mysql.devdb.lovego.xin:3306/lovego_order?useUnicode=true&characterEncoding=UTF-8
-      username: lovego_erp
-      password: lovego_erplovego_erp
+      url: jdbc:mysql://localhost:3306/wugf_order?useUnicode=true&characterEncoding=UTF-8
+      username: root
+      password: root
      # 使用druid数据源
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
